<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nakatani</string>
    <!-- <string name="patient_activity_label">Пациент</string> -->

    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_search">Поиск</string>
    <string name="refreshing">Refreshing...</string>
    <string name="app_title">USB Serial Example</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_calibration">CalibrationActivity</string>
    <string name="title_activity_diagnostics">DiagnosticsActivity</string>
    <string name="title_activity_my">MyActivity</string>

    <string-array name="home_screen_array">
        <item>Картотека</item>
        <item>Карточка пациента</item>
        <item>История болезни</item>
        <item>Диагностика</item>
        <item>Тестирование</item>
    </string-array>
    <string-array name="diagnostics_screen_array">
        <item>Значения ЭКС</item>
        <item>Карта Риодораку</item>
        <item>Оценка</item>
        <item>Рекомендации</item>
    </string-array>

    <!-- HOME SCREEN FRAGMENTS -->
    <!-- Card file Fragment -->


    <!-- Medical History Fragment -->


    <!-- Diagnostics Fragment -->


    <!-- Testing Fragment -->
    <string name="button_testing_for_patient">Тестирование для пациента</string>
    <string name="button_testing_anonymous">Анонимное тестирование</string>
    <string name="button_testing_calibration">Калибровать аппарат</string>

    <!-- Calibration Activity -->
    <string name="button_calibration_start">Старт</string>
    <string name="button_calibration_ok">Продолжить</string>
    <string name="radio_button_calibration_hi">Верхний предел</string>
    <string name="radio_button_calibration_low">Нижний предел</string>
    <!-- Text -->
    <string name="calibration_text_help">Для выполнения калибровки последовательно выбирите "Верхний предел" и "Нижний предел"</string>
    <string name="calibration_text_help_low">Разомкните контакты датчика и удерживайте их разомкнутыми до окончания времени измерения</string>
    <string name="calibration_text_help_high">Замкните контакты датчика и удерживайте их замкнутыми до окончания времени измерения</string>

    <!-- Test Activity -->
    <string name="button_test_start">Старт</string>
    <string name="button_test_stop">Стоп</string>
    <string name="button_test_prev">Назад</string>
    <string name="button_test_next">Вперед</string>
    <string name="button_test_reset">Сброс</string>
    <string name="button_test_clear">Очистить</string>
    <string name="button_test_calibration">Калибровать</string>
    <string name="button_test_done">Далее</string>
    <string name="text_view_vaue_now">Текущее значение</string>
    <string name="text_view_value_max">Максимальное значение</string>
    <string name="text_view_point_desc">Описание точки:</string>
    <string name="text_view_point_name">Точки</string>
    <string name="text_view_point_value_left">Слева</string>
    <string name="text_view_point_value_right">Справа</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
