<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vadim.nakatani.fragments.home_screen.TestingFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/linearLayoutTestFragment">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_testing_for_patient"
            android:id="@+id/button_testing_test_for_patient"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_testing_anonymous"
            android:id="@+id/button_testing_test_anonymous"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/button_testing_test_for_patient"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_testing_calibration"
            android:id="@+id/button_testing_calibration"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/button_testing_test_anonymous"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>
</FrameLayout>
